2006-10-19 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fixed bug in history_search_*
	* Fixed bug in beginning_of_line_extend_selection and end_of_line_extend_selection
	* Fixd bugs to make vi_test work again, one test failure remains
	*
	
	
2006-10-19 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Adding argument handling.
	* Adding argument to functions:forward_char, backward_char, forward_word, backward_word
	  forward_word_end, backward_word_end, beginning_of_line_extend_selection, end_of_line_extend_selection
	  forward_char_extend_selection, backward_char_extend_selection, forward_word_extend_selection,
	  backward_word_extend_selection, forward_word_end_extend_selection, backward_word_end_extend_selection,
	  delete_char, backward_delete_char, backward_delete_word, forward_delete_word, 
	
2006-10-18 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Adding functionality to dump_functions
	* fixing some clipboard bugs
	* Added transpose_chars, transpose_words, upcase_word, downcase_word
	  capitalize_word, forward_delete_word, delete_horizontal_spacing
	* Added alias forward_kill_word for kill_word
	* Fixed bug in handling control keystrokes
	* Fixed bug in delete_selection
	* Changed clipboard handling in kill functions
	* Change paste to only paste single line and dropping trailing newline
	* Change paste_mulitline_code docstring
	
2006-10-17 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fixed history search bug. Exception when no match was found
	* Added backward_kill_word. (No difference to backward_delete_word)
	
2006-09-11 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Added logserver. Socket based server that can receive logmessage.
	  To be used when debugging keypresses, could be a security risk as a keyboard sniffer.
	* Added log_sock call to send logging to logserver
	* Merging ANSI parsing from trunk
	* Parsing escape sequence for up down key in parse_bind